--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.2
+dj-database-url==0.4.2
 Django==1.10.5
 gunicorn==19.7.0
 packaging==16.8
@@ -6,3 +7,4 @@ psycopg2==2.7
 pyparsing==2.1.10
 requests==2.13.0
 six==1.10.0
+whitenoise==3.3.0
